# foofoo-v3

./: .gitignore  .mcp.json  CLAUDE.md  KNOWLEDGE.html  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: check-knowledge-book.sh
.github/workflows/: backend-ci.yml  drive-backup.yml  mirror.yml
contracts/: ghar-re-v1.schema.json
data/source/: README.md  base_weights.yaml  community_priors.csv  derivation_params.yaml  distance_weights.yaml  filters.yaml  pairing_rules.yaml  q15_weights.yaml  weather_rules.yaml
database/etl/: generate_icd1_seeds.py  generate_re_seeds.py
database/migrations/: 012_interaction_audit_appendonly.sql  016_dish_features.sql  021_cuisines_reference.sql  022_dish_display_attributes.sql  023_tags_uniqueness_and_vector_positions.sql  024_re_dish_regional_affinity.sql  025_combo_component_type_and_slot_array.sql  026_meal_classes_mirror_slot_array.sql  028_weight_ladder_config_numeric_weights.sql  029_pf1_security_hardening.sql  030_re_cohorts_city_tier.sql  031_dish_ingredients_main_ingredient_flag.sql  032_interaction_events_dedup_key.sql  033_household_members_conditions_vocabulary.sql  034_ghar_re_schema_and_catalogue.sql  035_ghar_re_household_runtime.sql  036_ghar_re_safety_support.sql  037_ghar_re_knowledge_base.sql  [ACTIVE]_007_re_identity_interaction_history 1.0.sql  [ACTIVE]_008_content_core1.1.sql  [ACTIVE]_015_operational_audit_public 1.1.sql
docs/: README.md
ghar_re/: README.md  catalogue.py  config.py  derivation.py  knowledge.py  pairing.py  pipeline.py  scoring.py  seedgen.py
ghar_re_core/: README.md  catalogue.py  config.py  derivation.py  fixtures.py  pairing.py  pipeline.py  scoring.py  seedgen.py
ghar_re_service/: README.md  pyproject.toml
ghar_re_service/ghar_re_service/: engine.py  lifecycle.py  main.py  modules.py  providers.py  schemas.py  version.py
ghar_re_service/tests/: test_contract.py  test_service.py
supabase/: README.md  config.toml  deno.json
(+403 files in other folders)
